force-app/main/default/objects/Trading_Strategy__c/Trading_Strategy__c.object-meta.xml
<CustomObject>
    <description>This object stores all trading strategies used by traders.</description>
    <label>Trading Strategy</label>
    <nameField>
        <label>Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trading Strategies</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>