force-app/main/default/objects/Trading_Strategy__c/fields/Capital_Category__c.field-meta.xml
<CustomField>
    <fullName>Capital_Category__c</fullName>
    <formula>IF( Capital_Required__c  &lt; 100000, &apos;Retail&apos;,  IF( Capital_Required__c  &lt; 1000000, &apos;Semi Professional&apos;, &apos;Professional&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capital Category</label>
    <type>Text</type>
</CustomField>