force-app/main/default/objects/Trading_Strategy__c/fields/Capital_Required__c.field-meta.xml
<CustomField>
    <fullName>Capital_Required__c</fullName>
    <label>Capital Required</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>