force-app/main/default/objects/Trading_Strategy__c/fields/Expected_Return__c.field-meta.xml
<CustomField>
    <fullName>Expected_Return__c</fullName>
    <label>Expected Return</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>