force-app/main/default/objects/Trading_Strategy__c/fields/Market_Type__c.field-meta.xml
<CustomField>
    <fullName>Market_Type__c</fullName>
    <description>Equity, Futures, Options, Commodity, Currency, Crypto</description>
    <inlineHelpText>Equity, Futures, Options, Commodity, Currency, Crypto</inlineHelpText>
    <label>Market Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equity</fullName>
                <default>true</default>
                <label>Equity</label>
            </value>
            <value>
                <fullName>Futures</fullName>
            </value>
            <value>
                <fullName>Options</fullName>
            </value>
            <value>
                <fullName>Commodity</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Crypto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>