force-app/main/default/objects/Trading_Strategy__c/fields/Maximum_Drawdown__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Drawdown__c</fullName>
    <label>Maximum Drawdown</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>