force-app/main/default/objects/Trading_Strategy__c/fields/Recommended_Experience__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Experience__c</fullName>
    <label>Recommended Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>