force-app/main/default/objects/Trading_Strategy__c/fields/Risk_Score_Weight__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score_Weight__c</fullName>
    <formula>IF(  ISPICKVAL( Risk_Level__c , &quot;Low&quot;), 25,  IF(  ISPICKVAL( Risk_Level__c , &quot;Medium&quot;), 50,  IF( ISPICKVAL( Risk_Level__c , &quot;High&quot;), 75, 100) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Score Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>