force-app/main/default/objects/Trading_Strategy__c/fields/Strategy_Code__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Code__c</fullName>
    <displayFormat>STR-{0000}</displayFormat>
    <label>Strategy Code</label>
    <type>AutoNumber</type>
</CustomField>