force-app/main/default/objects/Trading_Strategy__c/fields/Strategy_Description__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Description__c</fullName>
    <label>Strategy Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>