force-app/main/default/objects/Trading_Strategy__c/fields/Strategy_Type__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Type__c</fullName>
    <label>Strategy Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scalping</fullName>
            </value>
            <value>
                <fullName>Intraday</fullName>
            </value>
            <value>
                <fullName>Swing</fullName>
            </value>
            <value>
                <fullName>Positional</fullName>
            </value>
            <value>
                <fullName>Option Buying</fullName>
            </value>
            <value>
                <fullName>Option Selling</fullName>
            </value>
            <value>
                <fullName>Iron Condor</fullName>
            </value>
            <value>
                <fullName>Iron Butterfly</fullName>
            </value>
            <value>
                <fullName>Straddle</fullName>
            </value>
            <value>
                <fullName>Strangle</fullName>
            </value>
            <value>
                <fullName>Covered Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>