force-app/main/default/objects/Trading_Strategy__c/recordTypes/Commodity_Strategy.recordType-meta.xml
<RecordType>
    <fullName>Commodity_Strategy</fullName>
    <active>true</active>
    <label>Commodity Strategy</label>
</RecordType>