force-app/main/default/objects/Trading_Strategy__c/recordTypes/Equity_Strategy.recordType-meta.xml
<RecordType>
    <fullName>Equity_Strategy</fullName>
    <active>true</active>
    <label>Equity Strategy</label>
</RecordType>