force-app/main/default/objects/Trading_Strategy__c/recordTypes/Futures_Strategy.recordType-meta.xml
<RecordType>
    <fullName>Futures_Strategy</fullName>
    <active>true</active>
    <label>Futures Strategy</label>
</RecordType>