force-app/main/default/objects/Trading_Strategy__c/recordTypes/Options_Strategy.recordType-meta.xml
<RecordType>
    <fullName>Options_Strategy</fullName>
    <active>true</active>
    <label>Options Strategy</label>
</RecordType>