force-app/main/default/objects/Trading_Strategy__c/validationRules/Capital_Required_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Capital_Required_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Expected_Return__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Capital_Required__c</errorDisplayField>
    <errorMessage>Capital Required must be greater than zero.</errorMessage>
</ValidationRule>