force-app/main/default/objects/Trading_Strategy__c/validationRules/Expected_Return_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Return_Cannot_Be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Expected_Return__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Expected_Return__c</errorDisplayField>
    <errorMessage>Expected Return cannot be negative.</errorMessage>
</ValidationRule>